--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "copy-to-clipboard": "^3.1.0",
     "js-base64": "^2.5.1",
     "jwt-decode": "^2.2.0",
     "rfuncs": "^1.2.0",
